--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.13.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ra-data-simple-rest": "^4.2.7",
-    "react": "^18.2.0",
+    "react": ">=16.8.0",
     "react-admin": "^4.2.7",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
